--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,18 @@
 @tailwind utilities;
 
 
+::-webkit-scrollbar-track {
+  background-color: #323234;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 4px;
+  background: #7D7D85;
+}
+
+
 body{
   background: black;
   color: white;
